example/Regest/RegestParser.py
from paredros_debugger.CustomParser import CustomParser
# Generated from Regest.g4 by ANTLR 4.13.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class RegestParser ( CustomParser ):

    grammarFileName = "Regest.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "<INVALID>", "'<head>'", "'</head>'", 
                     "'<sublemma>'", "'</sublemma>'", "'vacat.'", "'vac.'", 
                     "'ob.'", "<INVALID>", "'post'", "'transgr.'", "'ad'", 
                     "'et'", "'cum'", "'ac'", "'in'", "'ex'", "'e.m.'", 
                     "'de'", "'prope'", "'villam'", "'m.'", "'L'", "'op.'", 
                     "'opid.'", "'civ.'", "'civit.'", "'burguo'", "'maioris castri'", 
                     "'castro'", "'ian.'", "'febr.'", "'mart.'", "'apr.'", 
                     "'mai.'", "'iun.'", "'iul.'", "'aug.'", "'sept.'", 
                     "'oct.'", "'nov.'", "'dec.'", "<INVALID>", "<INVALID>", 
                     "'Marie'", "'Andree'", "'Michaelis'", "'Nicolai'", 
                     "'Saluatoris'", "'Walburgis'", "'Bernardi'", "'Theoton.'", 
                     "'Theutonicorum'", "'Jerosol.'", "'Johannis'", "'al.'", 
                     "'d.'", "'dictus'", "'cler.'", "'mag.'", "'bac.'", 
                     "'decr.'", "'art.'", "'doct.'", "'lic.'", "'prof.'", 
                     "'theol.'", "'laicus'", "'iur.'", "'can.'", "'utr.'", 
                     "'med.'", "'leg.'", "'acol.'", "'acolit.'", "'lect.'", 
                     "'acolut'", "'ord.'", "'o.'", "'s.'", "'Ant.'", "'Herem.'", 
                     "'Ben.'", "'Clun.'", "'Pred.'", "'Min.'", "'Carmel.'", 
                     "'Cist.'", "'Prem.'", "'dom.'", "'b.'", "'bb.'", "'ss.'", 
                     "'apl.'", "'prov.'", "'super'", "'par.'", "'eccl.'", 
                     "'cathedr.'", "'capellan.'", "'hosp.'", "<INVALID>", 
                     "'mon.'", "'dioc.'", "'dicte'", "<INVALID>", "'admin.'", 
                     "<INVALID>", "'decan.'", "'alt.'", "','", "'.'" ]

    symbolicNames = [ "<INVALID>", "WS", "HEADTAG", "CLOSEHEADTAG", "SUBLEMMATAG", 
                      "CLOSESUBLEMMATAG", "VACAT", "VAC", "OB", "PER", "POST", 
                      "TRANSGR", "AD", "ET", "CUM", "AC", "IN", "EX", "EM", 
                      "DE", "PROPE", "VILLAM", "M", "L", "OP", "OPID", "CIV", 
                      "CIVIT", "BURGUO", "MAIORIS_CASTRI", "CASTRO", "IAN", 
                      "FEBR", "MART", "APR", "MAI", "IUN", "IUL", "AUG", 
                      "SEPT", "OCT", "NOV", "DEC", "STADTNAMEN", "PTRNAME", 
                      "MARIE", "ANDREE", "MICHAELIS", "NICOLAI", "SALUATORIS", 
                      "WALBURGIS", "BERNARDI", "THEOTON", "THEUTONICORUM", 
                      "JEROSOL", "JOHANNIS", "AL", "D", "DICTUS", "CLERIC", 
                      "MAG", "BAC", "DECR", "ART", "DOCT", "LIC", "PROF", 
                      "THEOL", "LAICUS", "IUR", "CAN", "UTR", "MED", "LEG", 
                      "ACOL", "ACOLIT", "LECT", "ACOLUT", "ORD", "O", "S", 
                      "ANT", "HEREM", "BEN", "CLUN", "PRED", "MIN", "CARMEL", 
                      "CIST", "PREM", "DOM", "B", "BB", "SS", "APL", "PROV", 
                      "SUPER", "PAR", "ECCL", "CATHEDRAL", "CAPELLAN", "HOSP", 
                      "PAUPER", "MON", "DIOCESIS", "DICTE", "ARCHIBES", 
                      "ADMIN", "CAPELL", "DECAN", "ALT", "KOMMA", "PUNKT", 
                      "INT", "WORD", "SPECIAL" ]

    RULE_startRule = 0
    RULE_head = 1
    RULE_sublemma = 2
    RULE_headInhalt = 3
    RULE_sublemmaInhalt = 4
    RULE_natPerson = 5
    RULE_personName = 6
    RULE_provision = 7
    RULE_date = 8
    RULE_fund = 9
    RULE_vita = 10
    RULE_inkardination = 11
    RULE_h_weihegrad = 12
    RULE_n_weihegrad = 13
    RULE_kein_weihegrad = 14
    RULE_orden = 15
    RULE_geistlicheOrden = 16
    RULE_zisterzienserOrden = 17
    RULE_ritterOrden = 18
    RULE_deutscherOrden = 19
    RULE_johanniterOrden = 20
    RULE_akadGrad = 21
    RULE_grad = 22
    RULE_studienfach = 23
    RULE_extras = 24
    RULE_mProvision = 25
    RULE_mIntro = 26
    RULE_acquType = 27
    RULE_uebertritt = 28
    RULE_uebertrittwirdfrei = 29
    RULE_uebertrittistfrei = 30
    RULE_uebertrittwarfrei = 31
    RULE_tod = 32
    RULE_todwirdfrei = 33
    RULE_todistfrei = 34
    RULE_todwarfrei = 35
    RULE_pfruende = 36
    RULE_pfruendenNorm = 37
    RULE_pfruendenNormType = 38
    RULE_pfruendenType = 39
    RULE_pfruendenInst = 40
    RULE_patroName = 41
    RULE_instType = 42
    RULE_instTypeHaupt = 43
    RULE_instTypeSub = 44
    RULE_location = 45
    RULE_stadt = 46
    RULE_bistum = 47
    RULE_bistuemer = 48
    RULE_ortsType = 49
    RULE_month = 50
    RULE_stadtnamen = 51
    RULE_name = 52
    RULE_alias = 53
    RULE_diocAbks = 54

    ruleNames =  [ "startRule", "head", "sublemma", "headInhalt", "sublemmaInhalt", 
                   "natPerson", "personName", "provision", "date", "fund", 
                   "vita", "inkardination", "h_weihegrad", "n_weihegrad", 
                   "kein_weihegrad", "orden", "geistlicheOrden", "zisterzienserOrden", 
                   "ritterOrden", "deutscherOrden", "johanniterOrden", "akadGrad", 
                   "grad", "studienfach", "extras", "mProvision", "mIntro", 
                   "acquType", "uebertritt", "uebertrittwirdfrei", "uebertrittistfrei", 
                   "uebertrittwarfrei", "tod", "todwirdfrei", "todistfrei", 
                   "todwarfrei", "pfruende", "pfruendenNorm", "pfruendenNormType", 
                   "pfruendenType", "pfruendenInst", "patroName", "instType", 
                   "instTypeHaupt", "instTypeSub", "location", "stadt", 
                   "bistum", "bistuemer", "ortsType", "month", "stadtnamen", 
                   "name", "alias", "diocAbks" ]

    EOF = Token.EOF
    WS=1
    HEADTAG=2
    CLOSEHEADTAG=3
    SUBLEMMATAG=4
    CLOSESUBLEMMATAG=5
    VACAT=6
    VAC=7
    OB=8
    PER=9
    POST=10
    TRANSGR=11
    AD=12
    ET=13
    CUM=14
    AC=15
    IN=16
    EX=17
    EM=18
    DE=19
    PROPE=20
    VILLAM=21
    M=22
    L=23
    OP=24
    OPID=25
    CIV=26
    CIVIT=27
    BURGUO=28
    MAIORIS_CASTRI=29
    CASTRO=30
    IAN=31
    FEBR=32
    MART=33
    APR=34
    MAI=35
    IUN=36
    IUL=37
    AUG=38
    SEPT=39
    OCT=40
    NOV=41
    DEC=42
    STADTNAMEN=43
    PTRNAME=44
    MARIE=45
    ANDREE=46
    MICHAELIS=47
    NICOLAI=48
    SALUATORIS=49
    WALBURGIS=50
    BERNARDI=51
    THEOTON=52
    THEUTONICORUM=53
    JEROSOL=54
    JOHANNIS=55
    AL=56
    D=57
    DICTUS=58
    CLERIC=59
    MAG=60
    BAC=61
    DECR=62
    ART=63
    DOCT=64
    LIC=65
    PROF=66
    THEOL=67
    LAICUS=68
    IUR=69
    CAN=70
    UTR=71
    MED=72
    LEG=73
    ACOL=74
    ACOLIT=75
    LECT=76
    ACOLUT=77
    ORD=78
    O=79
    S=80
    ANT=81
    HEREM=82
    BEN=83
    CLUN=84
    PRED=85
    MIN=86
    CARMEL=87
    CIST=88
    PREM=89
    DOM=90
    B=91
    BB=92
    SS=93
    APL=94
    PROV=95
    SUPER=96
    PAR=97
    ECCL=98
    CATHEDRAL=99
    CAPELLAN=100
    HOSP=101
    PAUPER=102
    MON=103
    DIOCESIS=104
    DICTE=105
    ARCHIBES=106
    ADMIN=107
    CAPELL=108
    DECAN=109
    ALT=110
    KOMMA=111
    PUNKT=112
    INT=113
    WORD=114
    SPECIAL=115

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class StartRuleContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def head(self):
            return self.getTypedRuleContext(RegestParser.HeadContext,0)


        def sublemma(self):
            return self.getTypedRuleContext(RegestParser.SublemmaContext,0)


        def getRuleIndex(self):
            return RegestParser.RULE_startRule

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStartRule" ):
                listener.enterStartRule(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStartRule" ):
                listener.exitStartRule(self)




    def startRule(self):

        localctx = RegestParser.StartRuleContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_startRule)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 110
            self.head()
            self.state = 111
            self.sublemma()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class HeadContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def HEADTAG(self):
            return self.getToken(RegestParser.HEADTAG, 0)

        def headInhalt(self):
            return self.getTypedRuleContext(RegestParser.HeadInhaltContext,0)


        def CLOSEHEADTAG(self):
            return self.getToken(RegestParser.CLOSEHEADTAG, 0)

        def getRuleIndex(self):
            return RegestParser.RULE_head

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterHead" ):
                listener.enterHead(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitHead" ):
                listener.exitHead(self)




    def head(self):

        localctx = RegestParser.HeadContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_head)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 113
            self.match(RegestParser.HEADTAG)
            self.state = 114
            self.headInhalt()
            self.state = 115
            self.match(RegestParser.CLOSEHEADTAG)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class SublemmaContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def SUBLEMMATAG(self):
            return self.getToken(RegestParser.SUBLEMMATAG, 0)

        def sublemmaInhalt(self):
            return self.getTypedRuleContext(RegestParser.SublemmaInhaltContext,0)


        def CLOSESUBLEMMATAG(self):
            return self.getToken(RegestParser.CLOSESUBLEMMATAG, 0)

        def getRuleIndex(self):
            return RegestParser.RULE_sublemma

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSublemma" ):
                listener.enterSublemma(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSublemma" ):
                listener.exitSublemma(self)




    def sublemma(self):

        localctx = RegestParser.SublemmaContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_sublemma)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 117
            self.match(RegestParser.SUBLEMMATAG)
            self.state = 118
            self.sublemmaInhalt()
            self.state = 119
            self.match(RegestParser.CLOSESUBLEMMATAG)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class HeadInhaltContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def natPerson(self):
            return self.getTypedRuleContext(RegestParser.NatPersonContext,0)


        def getRuleIndex(self):
            return RegestParser.RULE_headInhalt

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterHeadInhalt" ):
                listener.enterHeadInhalt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitHeadInhalt" ):
                listener.exitHeadInhalt(self)




    def headInhalt(self):

        localctx = RegestParser.HeadInhaltContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_headInhalt)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 121
            self.natPerson()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class SublemmaInhaltContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def date(self):
            return self.getTypedRuleContext(RegestParser.DateContext,0)


        def fund(self):
            return self.getTypedRuleContext(RegestParser.FundContext,0)


        def provision(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(RegestParser.ProvisionContext)
            else:
                return self.getTypedRuleContext(RegestParser.ProvisionContext,i)


        def getRuleIndex(self):
            return RegestParser.RULE_sublemmaInhalt

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSublemmaInhalt" ):
                listener.enterSublemmaInhalt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSublemmaInhalt" ):
                listener.exitSublemmaInhalt(self)




    def sublemmaInhalt(self):

        localctx = RegestParser.SublemmaInhaltContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_sublemmaInhalt)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 124 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 123
                self.provision()
                self.state = 126 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not (_la==22):
                    break

            self.state = 128
            self.date()
            self.state = 129
            self.fund()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class NatPersonContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def personName(self):
            return self.getTypedRuleContext(RegestParser.PersonNameContext,0)


        def vita(self):
            return self.getTypedRuleContext(RegestParser.VitaContext,0)


        def getRuleIndex(self):
            return RegestParser.RULE_natPerson

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterNatPerson" ):
                listener.enterNatPerson(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitNatPerson" ):
                listener.exitNatPerson(self)




    def natPerson(self):

        localctx = RegestParser.NatPersonContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_natPerson)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 131
            self.personName()
            self.state = 133
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if ((((_la - 59)) & ~0x3f) == 0 and ((1 << (_la - 59)) & 4503599627862759) != 0):
                self.state = 132
                self.vita()


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class PersonNameContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def name(self):
            return self.getTypedRuleContext(RegestParser.NameContext,0)


        def alias(self):
            return self.getTypedRuleContext(RegestParser.AliasContext,0)


        def getRuleIndex(self):
            return RegestParser.RULE_personName

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPersonName" ):
                listener.enterPersonName(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPersonName" ):
                listener.exitPersonName(self)




    def personName(self):

        localctx = RegestParser.PersonNameContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_personName)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 135
            self.name()
            self.state = 137
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if (((_la) & ~0x3f) == 0 and ((1 << _la) & 504403158265495552) != 0):
                self.state = 136
                self.alias()


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ProvisionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def mProvision(self):
            return self.getTypedRuleContext(RegestParser.MProvisionContext,0)


        def getRuleIndex(self):
            return RegestParser.RULE_provision

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProvision" ):
                listener.enterProvision(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProvision" ):
                listener.exitProvision(self)




    def provision(self):

        localctx = RegestParser.ProvisionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_provision)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 139
            self.mProvision()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DateContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def INT(self, i:int=None):
            if i is None:
                return self.getTokens(RegestParser.INT)
            else:
                return self.getToken(RegestParser.INT, i)

        def month(self):
            return self.getTypedRuleContext(RegestParser.MonthContext,0)


        def PUNKT(self):
            return self.getToken(RegestParser.PUNKT, 0)

        def getRuleIndex(self):
            return RegestParser.RULE_date

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDate" ):
                listener.enterDate(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDate" ):
                listener.exitDate(self)




    def date(self):

        localctx = RegestParser.DateContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_date)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 141
            self.match(RegestParser.INT)
            self.state = 142
            self.month()
            self.state = 143
            self.match(RegestParser.INT)
            self.state = 145
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==112:
                self.state = 144
                self.match(RegestParser.PUNKT)


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FundContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def L(self):
            return self.getToken(RegestParser.L, 0)

        def INT(self, i:int=None):
            if i is None:
                return self.getTokens(RegestParser.INT)
            else:
                return self.getToken(RegestParser.INT, i)

        def extras(self):
            return self.getTypedRuleContext(RegestParser.ExtrasContext,0)


        def getRuleIndex(self):
            return RegestParser.RULE_fund

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFund" ):
                listener.enterFund(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFund" ):
                listener.exitFund(self)




    def fund(self):

        localctx = RegestParser.FundContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_fund)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 147
            self.match(RegestParser.L)
            self.state = 148
            self.match(RegestParser.INT)
            self.state = 149
            self.match(RegestParser.INT)
            self.state = 151
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if ((((_la - 112)) & ~0x3f) == 0 and ((1 << (_la - 112)) & 13) != 0):
                self.state = 150
                self.extras()


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class VitaContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def inkardination(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(RegestParser.InkardinationContext)
            else:
                return self.getTypedRuleContext(RegestParser.InkardinationContext,i)


        def akadGrad(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(RegestParser.AkadGradContext)
            else:
                return self.getTypedRuleContext(RegestParser.AkadGradContext,i)


        def KOMMA(self, i:int=None):
            if i is None:
                return self.getTokens(RegestParser.KOMMA)
            else:
                return self.getToken(RegestParser.KOMMA, i)

        def getRuleIndex(self):
            return RegestParser.RULE_vita

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterVita" ):
                listener.enterVita(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitVita" ):
                listener.exitVita(self)




    def vita(self):

        localctx = RegestParser.VitaContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_vita)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 160 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 154
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==111:
                    self.state = 153
                    self.match(RegestParser.KOMMA)


                self.state = 158
                self._errHandler.sync(self)
                token = self._input.LA(1)
                if token in [59, 68, 74, 75, 76, 77]:
                    self.state = 156
                    self.inkardination()
                    pass
                elif token in [60, 61, 64, 65, 66]:
                    self.state = 157
                    self.akadGrad()
                    pass
                else:
                    raise NoViableAltException(self)

                self.state = 162 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not (((((_la - 59)) & ~0x3f) == 0 and ((1 << (_la - 59)) & 4503599627862759) != 0)):
                    break

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class InkardinationContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def h_weihegrad(self):
            return self.getTypedRuleContext(RegestParser.H_weihegradContext,0)


        def n_weihegrad(self):
            return self.getTypedRuleContext(RegestParser.N_weihegradContext,0)


        def kein_weihegrad(self):
            return self.getTypedRuleContext(RegestParser.Kein_weihegradContext,0)


        def location(self):
            return self.getTypedRuleContext(RegestParser.LocationContext,0)


        def getRuleIndex(self):
            return RegestParser.RULE_inkardination

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterInkardination" ):
                listener.enterInkardination(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitInkardination" ):
                listener.exitInkardination(self)




    def inkardination(self):

        localctx = RegestParser.InkardinationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_inkardination)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 167
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [59]:
                self.state = 164
                self.h_weihegrad()
                pass
            elif token in [74, 75, 76, 77]:
                self.state = 165
                self.n_weihegrad()
                pass
            elif token in [68]:
                self.state = 166
                self.kein_weihegrad()
                pass
            else:
                raise NoViableAltException(self)

            self.state = 170
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,9,self._ctx)
            if la_ == 1:
                self.state = 169
                self.location()


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class H_weihegradContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def CLERIC(self):
            return self.getToken(RegestParser.CLERIC, 0)

        def getRuleIndex(self):
            return RegestParser.RULE_h_weihegrad

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterH_weihegrad" ):
                listener.enterH_weihegrad(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitH_weihegrad" ):
                listener.exitH_weihegrad(self)




    def h_weihegrad(self):

        localctx = RegestParser.H_weihegradContext(self, self._ctx, self.state)
        self.enterRule(localctx, 24, self.RULE_h_weihegrad)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 172
            self.match(RegestParser.CLERIC)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class N_weihegradContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ACOL(self):
            return self.getToken(RegestParser.ACOL, 0)

        def ACOLIT(self):
            return self.getToken(RegestParser.ACOLIT, 0)

        def LECT(self):
            return self.getToken(RegestParser.LECT, 0)

        def IN(self):
            return self.getToken(RegestParser.IN, 0)

        def orden(self):
            return self.getTypedRuleContext(RegestParser.OrdenContext,0)


        def ACOLUT(self):
            return self.getToken(RegestParser.ACOLUT, 0)

        def getRuleIndex(self):
            return RegestParser.RULE_n_weihegrad

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterN_weihegrad" ):
                listener.enterN_weihegrad(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitN_weihegrad" ):
                listener.exitN_weihegrad(self)




    def n_weihegrad(self):
